--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,12 @@ dependencies:
   flutter:
     sdk: flutter
   image_cropper: ^1.3.1
-  
+
   audioplayers: ^0.16.1
   auto_route: ^0.6.7
   cached_network_image: ^2.3.2+1
   cupertino_icons: ^1.0.0
   dartz: ^0.9.1
-  device_info: ^0.4.2+8
   dio: ^3.0.10
   dio_http_cache: ^0.2.11
   easy_localization: ^2.3.3
@@ -62,6 +61,9 @@ dependencies:
   tutorial_coach_mark: ^0.5.1
   flutter_cache_manager: ^2.0.0
   firebase_dynamic_links: ^0.5.1
+  package_info: ^0.4.3+2
+  launch_review: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -93,3 +95,4 @@ flutter:
         - asset: assets/fonts/Rubik-Medium.ttf
 flutter_intl:
   enabled: true
+
