--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^4.0.0+4
   image_cropper: ^1.3.1
   flutter_google_ad_manager: ^0.11.1
   audioplayers: ^0.16.1
@@ -28,7 +29,6 @@ dependencies:
   firebase_messaging: ^6.0.16
   firebase_storage: ^3.1.6
   flushbar: ^1.10.4
-  flutter_animated_dialog: ^1.1.0
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
   flutter_linkify: ^3.1.3
