--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   image_cropper: ^1.3.1
-
   audioplayers: ^0.16.1
   auto_route: ^0.6.7
+  country_code_picker: ^1.5.0
   cached_network_image: ^2.3.2+1
   cupertino_icons: ^1.0.0
   dartz: ^0.9.1
@@ -27,7 +27,6 @@ dependencies:
   firebase_messaging: ^6.0.16
   firebase_storage: ^3.1.6
   flushbar: ^1.10.4
-  flutter_animated_dialog: ^1.1.0
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
   flutter_linkify: ^3.1.3
