--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   package_info: ^0.4.3+2
   launch_review: ^2.0.0
   flutter_google_ad_manager: ^0.11.1
+  advertising_id: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
