--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,11 @@ dependencies:
   dio_http_cache: ^0.2.11
   easy_localization: ^2.3.3
   file_picker: ^2.0.3
-  firebase_core: ^0.4.5
-  firebase_crashlytics: ^0.1.4+1
-  firebase_messaging: ^6.0.16
-  firebase_storage: ^3.1.6
+  firebase_core: ^0.5.2
+  firebase_crashlytics: ^0.2.3
+  firebase_messaging: ^7.0.3
+  firebase_storage: ^5.0.1
+  firebase_admob: ^0.10.2
   flushbar: ^1.10.4
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
@@ -62,6 +63,10 @@ dependencies:
   firebase_dynamic_links: ^0.5.1
   package_info: ^0.4.3+2
   launch_review: ^2.0.0
+  
+ 
+
+  
   flutter_google_ad_manager: ^0.11.1
   advertising_id: ^1.0.0
 
