--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,10 @@ dependencies:
   tutorial_coach_mark: ^0.5.1
   flutter_cache_manager: ^2.0.0
   firebase_dynamic_links: ^0.5.1
-  package_info: ^0.4.3+2
+  package_info: ^0.4.3+2 
+  firebase_analytics: ^6.2.0
   launch_review: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,6 +76,7 @@ dev_dependencies:
   lint: ^1.2.0
   mobx_codegen: ^1.1.0+1
   retrofit_generator: ^1.3.7+2
+
 
 flutter:
   uses-material-design: true
