--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^5.5.1
   vibration: ^1.5.0
   video_compress: ^2.0.0
+  flick_video_player: ^0.1.1
   video_player: ^0.10.12+4
   video_thumbnail: ^0.2.2
   tutorial_coach_mark: ^0.5.1
