--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   freezed_annotation: ^0.12.0
   get_it: ^5.0.1
-  image_gallery_saver: ^1.6.1
+  # image_gallery_saver: ^1.6.1
   image_picker: ^0.6.7+12
   json_annotation: ^3.1.0
   logger: ^0.9.2
