--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,6 @@ dependencies:
   flutter_swiper: ^1.1.6
   freezed_annotation: ^0.12.0
   get_it: ^5.0.1
-  # image_gallery_saver: ^1.6.1
   image_picker: ^0.6.7+12
   json_annotation: ^3.1.0
   logger: ^0.9.2
@@ -67,6 +66,7 @@ dependencies:
   package_info: ^0.4.3+2 
   launch_review: ^2.0.0
   visibility_detector: ^0.1.5
+  flutter_staggered_grid_view: ^0.3.2
 
 
 dev_dependencies:
