--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,18 @@ dependencies:
   dio_http_cache: ^0.2.11
   easy_localization: ^2.3.3
   file_picker: ^2.0.3
-  firebase_core: ^0.5.2
-  firebase_crashlytics: ^0.2.3
+  firebase_core: ^0.5.3
+  firebase_crashlytics: ^0.2.4
   firebase_messaging: ^7.0.3
-  firebase_storage: ^5.0.1
-  firebase_dynamic_links: ^0.5.1
-  firebase_analytics: ^6.2.0
+  firebase_storage: ^5.2.0
+  firebase_dynamic_links: ^0.6.3
+  firebase_analytics: ^6.3.0
   admob_flutter: ^1.0.1
   flushbar: ^1.10.4
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
   flutter_linkify: ^3.1.3
-  flutter_local_notifications: ^1.4.4+4
+  flutter_local_notifications: ^3.0.2
   flutter_mobx: ^1.1.0+2
   flutter_statusbarcolor: ^0.2.3
   flutter_svg: ^0.19.0
@@ -78,7 +78,7 @@ dev_dependencies:
   json_serializable: ^3.5.0
   lint: ^1.2.0
   mobx_codegen: ^1.1.0+1
-  retrofit_generator: ^1.3.7+2
+  retrofit_generator: ^1.4.0+2
 
 
 flutter:
