--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   dartz: ^0.9.1
   dio: ^3.0.10
+  pretty_dio_logger: ^1.1.1
   dio_http_cache: ^0.2.11
   easy_localization: ^2.3.3
   file_picker: ^2.0.3
