--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_analytics: ^6.3.0
   admob_flutter: ^1.0.1
   flushbar: ^1.10.4
+  flutter_hooks: ^0.15.0
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
   flutter_linkify: ^3.1.3
