--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   image_picker: ^0.6.7+12
   json_annotation: ^3.1.0
   logger: ^0.9.2
-  lottie: ^0.6.0
+  lottie: ^0.7.0+1
   mobx: ^1.2.1+2
   modal_bottom_sheet: ^0.2.2
   path_provider: ^1.6.18
@@ -69,6 +69,8 @@ dependencies:
   launch_review: ^2.0.0
   visibility_detector: ^0.1.5
   flutter_staggered_grid_view: ^0.3.2
+  cool_alert: ^1.0.3
+
 
 
 dev_dependencies:
