--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   visibility_detector: ^0.1.5
   flutter_staggered_grid_view: ^0.3.2
   cool_alert: ^1.0.3
+  in_app_purchase: ^0.3.5+1
+
 
 
 
