--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,6 @@ dependencies:
   flick_video_player: ^0.1.1
   video_player: ^0.10.12+4
   video_thumbnail: ^0.2.2
-  tutorial_coach_mark: ^0.5.1
   flutter_cache_manager: ^2.0.0
   package_info: ^0.4.3+2 
   launch_review: ^2.0.0
@@ -71,9 +70,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   cool_alert: ^1.0.3
   in_app_purchase: ^0.3.5+1
-
-
-
+  showcaseview: ^0.1.6
 
 dev_dependencies:
   flutter_test:
