--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: iconapp
 description: Icon application
 
-publish_to: 'none'
+publish_to: "none"
 
 version: 2.0.8+24
 
@@ -58,13 +58,12 @@ dependencies:
   scroll_to_index: 1.0.6
   shared_preferences: ^0.5.12
   url_launcher: ^5.5.1
-  vibration: ^1.5.0
   video_compress: ^2.0.0
   flick_video_player: ^0.1.1
   video_player: ^0.10.12+4
   video_thumbnail: ^0.2.2
   flutter_cache_manager: ^2.0.0
-  package_info: ^0.4.3+2 
+  package_info: ^0.4.3+2
   launch_review: ^2.0.0
   visibility_detector: ^0.1.5
   flutter_staggered_grid_view: ^0.3.2
@@ -82,9 +81,6 @@ dev_dependencies:
   lint: ^1.2.0
   mobx_codegen: ^1.1.0+1
   retrofit_generator: ^1.4.0+2
-    
-
-
 
 flutter:
   uses-material-design: true
@@ -105,4 +101,3 @@ flutter:
         - asset: assets/fonts/Rubik-Medium.ttf
 flutter_intl:
   enabled: true
-
